# bieck_to_petoohonchik

./: .gitignore  AGENTS.md  Makefile  package.json
.githooks/: pre-commit  (+1 more)
apps/api/: AGENTS.md  README.md  pyproject.toml
apps/api/db/: app.db
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0f3a6b5d8f11_add_user_and_owner_to_ad.py  54638ff89cbd_add_session_table.py  9c490c40b216_create_category_table.py  c3ee0845dd53_create_ad_tabl.py
apps/api/scripts/: export_openapi.py
apps/api/src/app/: __init__.py  asgi.py  cli.py
apps/api/src/app/config/: settings.py
apps/api/src/app/db/: __init__.py
apps/api/src/app/domain/: __init__.py  ad.py  category.py  session.py  user.py
apps/api/src/app/http/: __init__.py  providers.py  service_exception_mapper.py
apps/api/src/app/http/controllers/: __init__.py  ad.py  auth.py  categories.py  health.py
apps/api/src/app/http/schemas/: __init__.py  ad.py  auth.py  category.py
apps/api/src/app/repositories/: ad_repository.py  category_repository.py  session_repository.py  user_repository.py
apps/api/src/app/security/: password_hasher.py  session_token_hasher.py
apps/api/src/app/services/: ad_service.py  auth_service.py  category_service.py  exceptions.py  models.py  session_service.py
apps/api/tests/: __init__.py  conftest.py  test_ad_service.py  test_ads.py  test_auth.py  test_auth_service.py  test_categories.py  test_config.py  test_health.py  test_migrations.py  test_password_hasher.py  test_session_repository.py  test_session_service.py  test_session_token_hasher.py  test_user_repository.py
(+26 files in other folders)
